src/test/scala/wacc/wacc_examples/invalid/semanticErr/classes/thisWrongType.wacc
# check this has correct typing

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
    class MyClass {
        MyClass get() is
            int x = this ;
            return x
        end
    }
    skip
end
